k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
spec:
  replicas: 2  # Run 2 instances
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - name: weather-container
          image: amrelabbasy/weather-image:latest  # Updated with correct DockerHub image
          ports:
            - containerPort: 80  # The port inside the container
