k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  type: NodePort  # Exposes app on a specific port
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80        # The port inside the cluster
      targetPort: 80  # The port inside the container
      nodePort: 31926  # Exposed external port (matches 192.168.49.2:31926)
